--- a/llt.html
+++ b/llt.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
+  <div class="warp">
   <header>
     <ul class="header-warp">
       <li class="header-item">
         <a href="#">新闻</a>
       </li>
       <li class="header-item">
-        <a href="#">好123</a>
+        <a href="#">hao123</a>
       </li>
       <li class="header-item">
         <a href="#">地图</a>
@@ -46,11 +47,12 @@
         <span class="input">
           <input type="text">
           <span class="icon icon-cam"></span>
-        </span>
-        <span class="button">百度一下</span>
+        </span><span class="button">百度一下</span>
       </div>
     </div>
+    <div class="blank"></div>
   </div>
+</div>
   <footer>
     <div class="footer-wrap">
     <div class="code-wrap">
@@ -78,9 +80,11 @@
         <ul>
           <li class="cz-item line-li">©2018 Baidu
             <a href="#">使用百度前必读</a>
-            <a href="#">意见反馈</a>京ICP证030173号<span class="icon icon-icr"></span></li>
+            <a href="#">意见反馈 </a>京ICP证030173号
+            <span class="icon icon-icr"></span></li>
           <li class="cz-item line-li">
-            <a href="#">京公网安备11000002000001号<span class="icon icon-jg"></span></a>
+            <a href="#">京公网安备11000002000001号
+              <span class="icon icon-jg"></span></a>
           </li>
         </ul>
       </p>
